# AI_Vault

./: .env.example  .gitignore  ANALISIS_CONVERSACION_CHAT_BRAIN.md  AUDITORIA_SISTEMA.json  BITACORA_DEPURACION.md  BITACORA_SISTEMA.md  BRAIN_AGENT_V8_RESUMEN_FINAL.md  Brain_Lab_Premisas_Canonicas_v3_2026-03-16.md  CAPACIDADES_CHAT_BRAIN_V3.md  CHAT_BRAIN_V3_1_RESUMEN.md  CHAT_BRAIN_V3_DESPLIEGUE.md  CHAT_BRAIN_V3_IMPLEMENTACION.md  CHECKPOINT_20260324.md  CHECKPOINT_MEJORAS_CHAT.md  CODEX_REPORT.json  CONFIG_SYSTEM_V8.md  DEPURACION_REPORTE.json  DEPURACION_REPORTE.md  DIAGNOSTICO_AGENTE.md  DIAGNOSTICO_Y_SOLUCION.md  EVALUACION_BRAIN_V9.md  FULL_ADN_INTEGRAL.json  FULL_ADN_INTEGRAL_2026_03_22.json  FULL_DNA.json  INFORME_AUDITORIA_INTEGRAL.md  INFORME_FINAL_PROYECTO.md  MIGRACION.md  PLAN_DEPURACION.md  PLAN_FORTALECIMIENTO_SISTEMICO.md  PLAN_MEJORA_CHAT_BRAIN_V3.md  PROYECTO_COMPLETADO.md  README.md  ROADMAP_BRAIN_CHAT_V8_COMPLETO.md  ROADMAP_STATUS.json  SISTEMA_INGESTA_CURADO_BRAIN.md  TEACHING_OPENCODE_METHODOLOGY.md  TEACHING_SYSTEM_DOCUMENTATION.md  TESTS_STATUS_100.md  UPGRADE_BRAIN_V10.md  backup  (+69 more)
tmp_agent/: .ses  ACTUALIZACION_ADN_20260324.json  CAMBIOS_FINALES_APLICADOS.md  CHECKPOINT_SAMPLE_ACCUMULATOR_20260324.md  CHECKPOINT_SAMPLE_ACCUMULATOR_20260324_FIXED.md  CAI_VAULTtmp_agenttmp_sc.json  Diagnostico_Investigativo.ps1.py  FIX_APLICADO_REPORTE.md  README_PLATFORMS.md  README_SERVICES.md  RESULTADOS_PRUEBAS.md  SERVIDOR_FUNCIONANDO.md  START_ALL.vbs  _apply_health_gate.ps1  _b4_organic.ps1  _b4v2.ps1  _b_e2e.ps1  _b_lookup.ps1  _b_restart.ps1  (+371 more)
(+3466 files in other folders)
